# right-casting-choice-ai

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  app1.py  main.py  old_app.py  pyproject.toml  requirements.txt  test.py
src/right_casting_choice_ai/: crew.py
src/right_casting_choice_ai/config/: agents.yaml  tasks.yaml
src/right_casting_choice_ai/tools/: __init__.py  omdb.py
