[project]
name = "right_casting_choice_ai"
version = "0.1.0"
description = "right-casting-choice-ai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.203.0,<1.0.0",
    "requests>=2.31.0"
]

[project.scripts]
right_casting_choice_ai = "right_casting_choice_ai.main:run"
run_crew = "right_casting_choice_ai.main:run"
train = "right_casting_choice_ai.main:train"
replay = "right_casting_choice_ai.main:replay"
test = "right_casting_choice_ai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
